# mal-readme-stats

./: .gitignore  Cargo.toml  README.md  vercel.json
api/activity/[media]/: [user].rs
api/statistics/[media]/: [user].rs
src/: lib.rs  models.rs  svg.rs  utils.rs
